--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,9 @@ body {
     background-color: var(--blue);
     color: var(--tan);
 }
+header, footer, h3 {
+    font-size: 130%;
+}
 
 header, footer, section {
     margin: 4px;
@@ -60,3 +63,23 @@ article:hover,
 article:hover h3 {
     box-shadow: 0 0 8px var(--orange);
 }
+
+article pre {
+    background-color: var(--orange);
+    color:  var(--blue);
+    font-size: 20px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: 800;
+}
+
+@media screen and (max-width: 1160px) {
+    article {
+      width: calc(50% - 32px);
+    }
+  }
+  
+  @media screen and (max-width: 768px) {
+    article {
+      width: calc(100% - 32px);
+    }
+  }
