--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ h3 {
     margin-left: 12px;
     margin-bottom: 8px;
     transition: box-shadow 500ms ease;
+    border-radius: 24px;
 }
 
 
@@ -70,6 +71,9 @@ article pre {
     font-size: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: 800;
+    padding: 8px;
+    border-radius: 8px;
+    box-shadow: -8px -8px var(--redD);
 }
 
 @media screen and (max-width: 1160px) {
